--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
 
             <div class="col-1">   
-            <ul>
+            <ul class="unstyled-list">
                 <li><strong>Bienvenueici</strong></li>
                 <li>Salut</li>
                 <li>Bonjour</li>
@@ -113,7 +113,7 @@
             </div>
 
               <div class="col-1">   
-            <ul>
+            <ul class="unstyled-list">
                 <li><strong>Bienvenueici</strong></li>
                 <li>Salut</li>
                 <li>Bonjour</li>
@@ -123,7 +123,7 @@
             </div>
 
               <div class="col-1">   
-            <ul>
+            <ul class="unstyled-list">
                 <li><strong>Bienvenueici</strong></li>
                 <li>Salut</li>
                 <li>Bonjour</li>
